# mcp-sqlify

./: .env.example  README.md  hello.py  pyproject.toml  requirements.txt
data/: init_db.py  init_db.sql  init_db.sqlite
docs/: development-principles.md  dspy-basic-usage.md  evaluation-metrics.md  huggingface-datasets-basic-usage.md  langchain-basic-usage.md  uv-basic-usage.md  wikisql-datasets.md
scripts/: evaluate.py
src/: config.py
src/agent/: core.py
src/data_manager/: __init__.py  cli.py  manager.py  sqlite_converter.py  wikisql_dataset.py
src/schema_loader/: __init__.py  cli.py  loader.py  wikisql_loader.py
tests/: test_data_manager.py  test_schema_loader.py  test_wikisql_schema_loader.py
